# USGS-M2M-CPP-API

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-ubuntu-gcc.yml
inc/: usgsM2M.hpp  usgsM2MDataTypes.hpp  usgsM2M_commonDataTypes.hpp  usgsM2M_loginDataTypes.hpp  usgsm2m.hpp  usgsm2m_common.hpp  usgsm2m_dataset.hpp  usgsm2m_login.hpp
src/: usgsm2m.cpp  usgsm2m_dataset.cpp  usgsm2m_download.cpp  usgsm2m_login.cpp  usgsm2m_misc.cpp  usgsm2m_scene.cpp  usgsm2m_tram.cpp
